# driver_usb

./: LICENSE  README.MD  README.md
driver_usb/: Cargo.toml
driver_usb/src/: err.rs  lib.rs  pci_interface.rs
driver_usb/src/abstractions/: dma.rs  mod.rs
driver_usb/src/glue/: driver_independent_device_instance.rs  mod.rs  ucb.rs
driver_usb/src/host/: mod.rs
driver_usb/src/host/data_structures/host_controllers/: mod.rs
driver_usb/src/host/data_structures/host_controllers/xhci/: context.rs  event_ring.rs  mod.rs  ring.rs
driver_usb/src/usb/: mod.rs  urb.rs
driver_usb/src/usb/descriptors/: desc_endpoint.rs  mod.rs  parser.rs
driver_usb/src/usb/descriptors/desc_uvc/: uvc_interfaces.rs
driver_usb/src/usb/drivers/: driverapi.rs  mod.rs
driver_usb/src/usb/operation/: mod.rs
driver_usb/src/usb/transfer/: control.rs  isoch.rs  mod.rs
driver_usb/src/usb/universal_drivers/: mod.rs
driver_usb/src/usb/universal_drivers/hid_drivers/: hid_mouse.rs
driver_usb/src/usb/universal_drivers/uvc_drivers/: generic_uvc.rs  mod.rs  uvc_device_model.rs  uvc_spec_transfer.rs
