[package]
name = "driver_usb"
version = "0.1.0"
edition = "2021"
description = "Common traits and types for usb device drivers"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/crates/driver_usb"
documentation = "https://rcore-os.github.io/arceos/driver_usb/index.html"


[features]
default = ["xhci", "packed_drivers"]
packed_drivers = []
xhci = []
pci = ["dep:pci_types","driver_common",]

[dependencies]
log = "0.4"
xhci = { git = "https://github.com/dbydd/xhci.git" }
memory_addr = { git = "https://github.com/kern-crates/memory_addr.git" }
spinning_top = "0.3.0"
tock-registers = "0.9.0"
bit_field = "0.10"
num-derive = "0.4.0"
num-traits = { version = "0.2.16", default-features = false }
const-enum = { git = "https://github.com/dbydd/const-enum-new.git" }
cfg-if = "1.0.0"


# arceos
driver_common = { git = "https://github.com/kern-crates/driver_common.git" ,optional=true }
pci_types = { version = "0.6", optional = true }
